# flprj

./: CMakeLists.txt  README.md
include/: common.hpp  graphics.hpp  linsolver.hpp  parser.hpp  simulation_engine.hpp
lib/: libGLEW.so.2.1
src/: graphics.cpp  linsolver.cpp  main.cpp  parser.cpp  simulation_engine.cpp
